--- a/GokuAdmi/index.html
+++ b/GokuAdmi/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akira Toriyama</title>
     <link rel="stylesheet" href="/bootstrap/scss/bootstrap.css">
-    <link rel="shortcut icon" href="/IMG/icon.avif" type="image/x-icon">
+    <link rel="shortcut icon" href="IMG/icon.avif" type="image/x-icon">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom shadow sticky-top">
-        <div class="container-fluid d-flex justify-content-between">
+        <div class="container d-flex">
             <a class="navbar-brand" href="#">
                 Akira Toriyama
             </a>
@@ -35,12 +35,15 @@
                     </li>
                 </ul>
             </div>
+            <div>
+                <img class="img-fluid rounded" src="IMG/icon.avif" alt="icono goku" style="width: 5em;">
+            </div>
         </div>
     </nav>
     
     <main class="container d-flex justify-content-center mt-5">
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-6 mb-3">
                 <img src="IMG/AKIRA.avif" class="img-fluid shadow-lg rounded-2" alt="Akira Toriyama">
             </div>
             <div class="col-md-6">
@@ -74,18 +77,26 @@
         </div>
     </main>
     <main class="container d-flex justify-content-center mt-5">
-        <div class="row border d-flex py-3">
+        <div class="row border">
             <div class="col-md-3 mb-3">
-                <img src="IMG/gokuproductos.jpg" alt="producto1" class="img-fluid">
+                <a href="/">
+                    <img src="IMG/gokuproductos.jpg" alt="producto1" class="img-fluid">
+                </a>
             </div>
             <div class="col-md-3 mb-3">
-                <img src="IMG/gokuproductos.02jpg.jpg" alt="producto1" class="img-fluid">
+                <a href="/">
+                    <img src="IMG/gokuproductos.02jpg.jpg" alt="producto2" class="img-fluid">
+                </a>
             </div>
             <div class="col-md-3 mb-3">
-                <img src="IMG/gokuproductos.03.jpg" alt="producto1" class="img-fluid">
+                <a href="/">
+                    <img src="IMG/gokuproductos.03.jpg" alt="producto3" class="img-fluid">
+                </a>
             </div>
             <div class="col-md-3 mb-3">
-                <img src="IMG/gokuproductos04.jpg" alt="producto1" class="img-fluid">
+                <a href="/">
+                    <img src="IMG/gokuproductos04.jpg" alt="producto4" class="img-fluid">
+                </a>
             </div>
         </div>
     </main>
@@ -93,28 +104,12 @@
         <div class="row">
             <div class="col-md-6">
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo nam, laboriosam corporis blanditiis explicabo sunt minima iusto nisi vel, aperiam velit optio nostrum? Quos minima, corrupti eos nesciunt saepe voluptatum excepturi ab blanditiis rem doloribus. Quaerat expedita voluptatum molestias velit culpa tenetur sed cum autem praesentium distinctio blanditiis, magni maxime?
-                    <div class="row mt-5 border py-3 shadow">
-                        <div class="col-md-3">
-                            <a href="/">
-                                <img src="IMG/Goku01.jpg" alt="goku imagen" width="100em">
-                            </a>
-                        </div>
-                        <div class="col-md-3">
-                            <img src="IMG/Goku02.jpg" alt="goku imagen" width="100em">
-                        </div>
-                        <div class="col-md-3">
-                            <img src="IMG/Goku03.jpg" alt="goku imagen" width="100em">
-                        </div>
-                        <div class="col-md-3">
-                            <img src="IMG/Goku02.jpg" alt="goku imagen" width="100em">
-                        </div>
-                    </div>
+                    Desde 2015, Akira Toriyama ha estado supervisando "Dragon Ball Super", que continúa las aventuras de Goku tras "Dragon Ball Z". También ha trabajado en películas recientes como "Dragon Ball Super: Broly" (2018) y "Dragon Ball Super: Super Hero" (2022), proporcionando guiones y diseños de personajes. Su estilo ha evolucionado, manteniendo sus característicos personajes de ojos grandes y expresivos, y mezclando acción y humor. Ha recibido reconocimientos internacionales y su trabajo en "Dragon Quest" ha sido fundamental para el éxito de estos videojuegos. 
                 </p>
             </div>
             <div class="col-sm-6">
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut ea nulla molestias culpa alias laboriosam vel aliquam at minus nemo deserunt, blanditiis adipisci itaque est modi earum commodi eum ut cumque quis nisi mollitia assumenda quisquam error. Animi necessitatibus perferendis officia eligendi repellendus ipsum in, quae corporis, eum, rerum cumque quisquam tempora praesentium. Laboriosam dolores illum, unde quae qui dolor voluptates aperiam, suscipit obcaecati laborum similique possimus neque, adipisci placeat nobis fugiat dicta earum consectetur. Ratione nulla a harum nostrum!
+                    Prefiere trabajar en proyectos que le apasionan y lleva una vida tranquila en Japón, lejos del ojo público. Ha influido a numerosos artistas jóvenes y ha colaborado en proyectos especiales, dejando un impacto duradero en la cultura otaku. Aunque no hay detalles concretos sobre proyectos futuros, es probable que siga contribuyendo en manga, anime y videojuegos debido a su creatividad continua.
                 </p>
             </div>
         </div>
