--- a/GokuAdmi/index.html
+++ b/GokuAdmi/index.html
@@ -14,8 +14,8 @@
                 Akira Toriyama
             </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
+                <span class="navbar-toggler-icon"></span>
+                </button>
             <div class="collapse navbar-collapse text-center" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -35,8 +35,9 @@
                     </li>
                 </ul>
             </div>
-            <div>
-                <img class="img-fluid rounded" src="IMG/icon.avif" alt="icono goku" style="width: 5em;">
+            <div class="d-none d-lg-block">
+                <img class="img-fluid rounded" 
+                src="IMG/icon.avif" alt="icono goku" style="width: 5em;">
             </div>
         </div>
     </nav>
