--- a/GokuAdmi/index.html
+++ b/GokuAdmi/index.html
@@ -80,17 +80,17 @@
     <main class="container d-flex justify-content-center mt-5">
         <div class="row border">
             <div class="col-md-3 mb-3">
-                <a href="/">
+                <a href="/IntraAnfi/Intranet.php">
                     <img src="IMG/gokuproductos.jpg" alt="producto1" class="img-fluid">
                 </a>
             </div>
             <div class="col-md-3 mb-3">
-                <a href="/">
+                <a href="/IntraInvi/Intranet.php">
                     <img src="IMG/gokuproductos.02jpg.jpg" alt="producto2" class="img-fluid">
                 </a>
             </div>
             <div class="col-md-3 mb-3">
-                <a href="/">
+                <a href="/IntraRepa/Intranet.php">
                     <img src="IMG/gokuproductos.03.jpg" alt="producto3" class="img-fluid">
                 </a>
             </div>
