--- a/PaginaWeb/EstrPagi/Construccion.html
+++ b/PaginaWeb/EstrPagi/Construccion.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Construcción</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="shortcut icon" href="../img/Mantenimiento.webp" type="image/x-icon">
     <style>
         html, body{
             height: 100vh;
@@ -16,7 +17,7 @@
         <div class="h-100 d-flex justify-content-center align-items-center row">
             <div class="col-md-6 text-center">
                 <h1 class="text-uppercase text-danger fw-bold">
-                    ¡Pagina en Matenimiento!
+                    ¡Pagina en Mantenimiento!
                 </h1>
                 <p class="fs-4 text-primary fst-italic">
                     Nuestro sitio web está en construcción
@@ -26,7 +27,7 @@
                 </p>
             </div>
             <div class="col-md-6">
-                <img src="https://nerade.com/media/pages/blog/ejemplos-de-mantenimiento-web-preventivo/4181583588-1696617130/ejemplos-de-mantenimiento-web-preventivo.jpg" alt="Mantenimiento" class="img-fluid rounded-4 shadow">
+                <img src="../img/Mantenimiento.webp" alt="Mantenimiento" class="img-fluid rounded-4 shadow">
             </div>
         </div>
     </div>
